--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "resend": "^4.6.0",
     "stream-chat": "^9.11.0",
     "stream-chat-react": "^13.2.2",
     "zustand": "^5.0.6"
